--- a/angular-ecommerce/angular-ecommerce/src/app/app.component.html
+++ b/angular-ecommerce/angular-ecommerce/src/app/app.component.html
@@ -1,10 +1,13 @@
 <div class="page-wrapper">
-
   <!-- MENU SIDEBAR-->
   <aside class="menu-sidebar d-none d-lg-block">
     <div class="logo">
       <a routerLink="/products">
-        <img src="assets/images/logo.png" alt="rosochackiShop" class="img-responsive">
+        <img
+          src="assets/images/logo.png"
+          alt="rosochackiShop"
+          class="img-responsive"
+        />
       </a>
     </div>
     <app-product-category-menu></app-product-category-menu>
@@ -19,6 +22,7 @@
         <div class="container-fluid">
           <div class="header-wrap">
             <app-search></app-search>
+            <app-login-status></app-login-status>
             <app-cart-status></app-cart-status>
           </div>
           <div class="account-wrap"></div>
@@ -30,18 +34,15 @@
     <!-- MAIN CONTENT-->
     <!-- <app-product-list></app-product-list> -->
     <router-outlet></router-outlet>
-
-
-
-    </div>
   </div>
+</div>
 
-  <!-- ENDS PAGE CONTAINER -->
-  
-	<footer>
-		<ul>
-			<li><a href="#">About Us</a></li>
-			<li><a href="#">Contact Us</a></li>
-			<li><a href="#">Help</a></li>
-		</ul>
-	</footer>
+<!-- ENDS PAGE CONTAINER -->
+
+<footer>
+  <ul>
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">Contact Us</a></li>
+    <li><a href="#">Help</a></li>
+  </ul>
+</footer>
